# Electron-Cash

./: $ gh workflow run triage.yml  .gitignore  .gitmodules  41065900  AUTHORS  MANIFEST.in  README.MD  README.rst  RELEASE-NOTES  RELEASE-NOTES.md  electron-cash  electron.desktop  electroncash.conf.sample  electrum-abc  icons.qrc  org.electroncash.ElectronCash.appdata.xml  pyproject.toml  setup-release.py  setup.py
- name: Setup Python                 uses: actions/: setup-python@v4.7.0.yml
android/: README.md
contrib/: base.sh  make_apk  make_linux_sdist  make_locale  make_packages  package_plugin.py
electroncash/: __init__.py  address.py  asert_daa.py  base_wizard.py  bitcoin.py  blockchain.py  cashacct.py  cashaddr.py  coinchooser.py  commands.py  consolidate.py  currencies.json  daemon.py  dnssec.py  exchange_rate.py  i18n.py  interface.py  jsonrpc.py  keystore.py  lns.py  mnemo.py  network.py  networks.py  old_contacts.py  old_mnemonic.py  paymentrequest.py  pem.py  plugins.py  rsakey.py  secp256k1.py  servers.json  servers_testnet.json  storage.py  synchronizer.py  token.py  token_meta.py  token_meta_fbch.py  transaction.py  util.py  verifier.py  (+6 more)
electroncash_plugins/: __init__.py
ios/: make_ios_project.sh  update_project.rb
lib/: address.py  asert_daa.py  base_wizard.py  bitcoin.py  blockchain.py  caches.py  cashacct.py  cashaddr.py  commands.py  contacts.py  contacts2.py  daemon.py  i18n.py  interface.py  keystore.py  mnemonic.py  network.py  networks.py  paymentrequest.py  plugins.py  rpa_paycode.py  schnorr.py  secp256k1.py  servers.json  slp.py  (+11 more)
(+267 files in other folders)
