[tool.poetry]
name = "electron-cash"
version = "4.3.1"
description = "Lightweight Bitcoin Cash Wallet"
authors = ["J <jonf@electroncash.org>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
pyaes = ">=0.1a1"
ecdsa = ">=0.9"
requests = "^2.31.0"
qrcode = "^7.4.2"
protobuf = ">=3.20,<4"
jsonrpclib-pelix = "^0.4.3.2"
pysocks = ">=1.6.6"
qdarkstyle = ">=2.8"
python-dateutil = "<2.9"
stem = ">=1.8.0"
certifi = "^2024.2.2"
pathvalidate = "^3.2.0"
dnspython = ">=2.0"
PyQt5-Qt5 = "<5.15.11"
pyqt5-sip = "^12.13.0"
pyqt5 = "^5.15.10"
zxing-cpp = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
